# SLIC-Superpixels

./: .gitignore  CMakeLists.txt  test_slic.cpp
